[package]
name = "bevy_mod_picking"
version = "0.11.0"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A modular picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "raycast", "input"]
categories = ["game-engines", "rendering"]
resolver = "2"

[workspace]
members = ["crates/*", "backends/*"]

[dependencies]
bevy = { version = "0.10", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_ui",
] }
bevy_egui = { optional = true, version = "0.20" }
bevy_rapier3d = { optional = true, version = "0.21" }

# Local
bevy_picking_core = { path = "crates/bevy_picking_core" }
bevy_picking_input = { path = "crates/bevy_picking_input" }
bevy_picking_selection = { optional = true, path = "crates/bevy_picking_selection" }
bevy_picking_highlight = { optional = true, path = "crates/bevy_picking_highlight" }
bevy_picking_raycast = { optional = true, path = "backends/bevy_picking_raycast" }
bevy_picking_ui = { optional = true, path = "backends/bevy_picking_ui" }
bevy_picking_rapier = { optional = true, path = "backends/bevy_picking_rapier" }
bevy_picking_shader = { optional = true, path = "backends/bevy_picking_shader" }
bevy_picking_sprite = { optional = true, path = "backends/bevy_picking_sprite" }
bevy_picking_egui = { optional = true, path = "backends/bevy_picking_egui" }

[dev-dependencies]
bevy = { version = "0.10", default-features = false, features = [
    "bevy_winit",
    "x11",
    "bevy_gltf",
    "bevy_scene",
    "png",
] }
bevy_framepace = { version = "0.12", default-features = false }

[features]
all = [
    "selection",
    "highlight",
    "debug",
    "backend_raycast",
    "backend_bevy_ui",
    "backend_rapier",
    "backend_shader",
    "backend_sprite",
    "backend_egui",
]
default = [
    "backend_raycast",
    "backend_bevy_ui",
    "backend_sprite",
    "debug",
    "selection",
    "highlight",
]
selection = [
    "bevy_picking_selection",
    "bevy_picking_input/selection",
    "bevy_picking_highlight/selection",
]
highlight = ["bevy_picking_highlight"]
debug = ["bevy/bevy_text", "bevy/bevy_sprite"]
backend_raycast = ["bevy_picking_raycast"]
backend_rapier = ["bevy_picking_rapier", "bevy_rapier3d"]
backend_shader = ["bevy_picking_shader"]
backend_sprite = ["bevy_picking_sprite"]
backend_bevy_ui = ["bevy_picking_ui"]
backend_egui = ["bevy_picking_egui", "bevy_egui"]

[[example]]
name = "rapier"
path = "examples/rapier.rs"
required-features = ["backend_rapier"]

[[example]]
name = "egui"
path = "examples/egui.rs"
required-features = ["backend_egui"]

[[example]]
name = "multiple_windows"
path = "examples/multiple_windows.rs"
required-features = ["backend_egui"]
