[package]
name = "bevy_mod_picking"
version = "0.14.0"
authors = ["Aevyrie <aevyrie@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A modular picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "input", "eventlistener"]
categories = ["game-engines", "rendering"]
resolver = "2"

[workspace]
members = ["crates/*", "backends/*"]

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_ui",
] }
bevy_eventlistener = { git = "https://github.com/aevyrie/bevy_eventlistener.git", branch = "main" } # "0.2"
bevy_egui = { optional = true, version = "0.21" }
bevy_rapier3d = { optional = true, version = "0.21" }

# Local
bevy_picking_core = { path = "crates/bevy_picking_core", version = "0.2" }
bevy_picking_input = { path = "crates/bevy_picking_input", version = "0.2" }
bevy_picking_selection = { optional = true, path = "crates/bevy_picking_selection", version = "0.2" }
bevy_picking_highlight = { optional = true, path = "crates/bevy_picking_highlight", version = "0.2" }
bevy_picking_raycast = { optional = true, path = "backends/bevy_picking_raycast", version = "0.2" }
bevy_picking_ui = { optional = true, path = "backends/bevy_picking_ui", version = "0.2" }
bevy_picking_rapier = { optional = true, path = "backends/bevy_picking_rapier", version = "0.2" }
bevy_picking_sprite = { optional = true, path = "backends/bevy_picking_sprite", version = "0.2" }
bevy_picking_egui = { optional = true, path = "backends/bevy_picking_egui", version = "0.2" }

[dev-dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "bevy_winit",
    "x11",
    "bevy_gltf",
    "bevy_scene",
    "png",
    "zstd",
    "tonemapping_luts",
    "ktx2",
] }

[features]
all = [
    "selection",
    "highlight",
    "debug",
    "backend_raycast",
    "backend_bevy_ui",
    "backend_rapier",
    "backend_sprite",
    "backend_egui",
]
default = [
    "backend_raycast",
    "backend_bevy_ui",
    "backend_sprite",
    "debug",
    "selection",
    "highlight",
]
selection = [
    "bevy_picking_selection",
    "bevy_picking_input/selection",
    "bevy_picking_highlight/selection",
]
highlight = ["bevy_picking_highlight/pbr"]
debug = ["bevy/bevy_text", "bevy/bevy_sprite", "bevy/default_font"]
backend_raycast = ["bevy_picking_raycast"]
backend_rapier = ["bevy_picking_rapier", "bevy_rapier3d"]
backend_sprite = ["bevy_picking_sprite", "bevy_picking_highlight/sprite"]
backend_bevy_ui = ["bevy_picking_ui"]
backend_egui = ["bevy_picking_egui", "bevy_egui"]

[[example]]
name = "rapier"
path = "examples/rapier.rs"
required-features = ["backend_rapier"]

[[example]]
name = "egui"
path = "examples/egui.rs"
required-features = ["backend_egui"]

[[example]]
name = "event_listener"
path = "examples/event_listener.rs"
required-features = ["backend_egui"]

[[example]]
name = "multiple_windows"
path = "examples/multiple_windows.rs"
required-features = ["backend_egui"]

[[example]]
name = "virtual_pointer"
path = "examples/virtual_pointer.rs"
required-features = ["backend_egui"]

[[example]]
name = "split_screen"
path = "examples/split_screen.rs"
required-features = ["backend_egui"]

[patch.crates-io]
bevy_mod_raycast = { git = 'https://github.com/aevyrie/bevy_mod_raycast', branch = 'main' }
bevy_eventlistener = { git = 'https://github.com/aevyrie/bevy_eventlistener', branch = 'main' }
