[package]
name = "bevy_picking_egui"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default-features = false }
bevy_egui = "0.19"
# Local
bevy_picking_core = { path = "../../crates/bevy_picking_core" }
bevy_picking_selection = { optional = true, path = "../../crates/bevy_picking_selection" }

[features]
selection = ["bevy_picking_selection"]
