[package]
name = "bevy_picking_rapier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_picking_core = { path = "../../crates/bevy_picking_core" }

bevy = { version = "0.8", default-features = false, features = ["render"] }
bevy_rapier3d = "0.16"
