[package]
name = "bevy_picking_rapier"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", default-features = false, features = [
    "bevy_render",
] }
bevy_rapier3d = "0.21"
# Local
bevy_picking_core = { path = "../../crates/bevy_picking_core" }
