[package]
name = "bevy_picking_raycast"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default-features = false, features = ["bevy_render"] }
bevy_mod_raycast = "0.7"
# Local
bevy_picking_core = { path = "../../crates/bevy_picking_core" }
