[package]
name = "bevy_picking_raycast"
version = "0.20.0-rc.0"
edition = "2021"
authors = ["Aevyrie <aevyrie@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A modular picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "input", "eventlistener"]
categories = ["game-engines"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { version = "0.14.0-rc.2", default-features = false }
bevy_ecs = { version = "0.14.0-rc.2", default-features = false }
bevy_reflect = { version = "0.14.0-rc.2", default-features = false }
bevy_render = { version = "0.14.0-rc.2", default-features = false }
bevy_transform = { version = "0.14.0-rc.2", default-features = false }
bevy_window = { version = "0.14.0-rc.2", default-features = false }

bevy_mod_raycast = { version = "0.18.0-rc.0" }
# Local
bevy_picking_core = { path = "../../crates/bevy_picking_core", version = "0.20.0-rc.0" }
