[package]
name = "bevy_picking_sprite"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", default-features = false }
# Local
bevy_picking_core = { path = "../../crates/bevy_picking_core" }
