[package]
name = "bevy_picking_highlight"
version = "0.2.0"
edition = "2021"
authors = ["Aevyrie <aevyrie@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A modular picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "input", "eventlistener"]
categories = ["game-engines"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_picking_core = { path = "../bevy_picking_core", version = "0.2" }
bevy_picking_input = { path = "../bevy_picking_input", version = "0.2" }
bevy_picking_selection = { optional = true, path = "../bevy_picking_selection", version = "0.2" }
bevy = { version = "0.11", default-features = false, features = [
    "bevy_render",
    "bevy_asset",
] }

[features]
selection = ["bevy_picking_selection"]
sprite = ["bevy/bevy_sprite"]
pbr = ["bevy/bevy_pbr"]
