[package]
name = "bevy_picking_highlight"
version = "0.17.1"
edition = "2021"
authors = ["Aevyrie <aevyrie@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A modular picking plugin for Bevy."
repository = "https://github.com/aevyrie/bevy_mod_picking/"
keywords = ["gamedev", "picking", "bevy", "input", "eventlistener"]
categories = ["game-engines"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = { version = "0.12", default-features = false }
bevy_asset = { version = "0.12", default-features = false }
bevy_ecs = { version = "0.12", default-features = false }
bevy_reflect = { version = "0.12", default-features = false }
bevy_render = { version = "0.12", optional = true, default-features = false }
bevy_pbr = { version = "0.12", optional = true, default-features = false }
bevy_sprite = { version = "0.12", optional = true, default-features = false }

bevy_picking_core = { path = "../bevy_picking_core", version = "0.17" }
bevy_picking_selection = { optional = true, path = "../bevy_picking_selection", version = "0.17" }

[features]
selection = ["bevy_picking_selection"]
sprite = ["bevy_render", "bevy_sprite"]
pbr = ["bevy_render", "bevy_pbr"]
