[package]
name = "bevy_picking_raycast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_picking_core = { path = "../bevy_picking_core" }

bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = [
    "render",
] }
bevy_mod_raycast = { git = "https://github.com/aevyrie/bevy_mod_raycast", branch = "main" }
